# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hl7_fhir_tool"
version = "0.1.0"
description = "HL7 v2 and FHIR viewer/transformer"
authors = [{ name = "Patrick Beach" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hl7apy>=1.3.4",
    "fhir.resources>=7.1.0",   # FHIR R4
    "lxml>=5.2.2",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6.0",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
